fix mobile spacing

--- a/scss/_root.scss
+++ b/scss/_root.scss
@@ -5,3 +5,9 @@
 body {
   font-family: $font;
 }
+
+@include desktop-only() {
+  :root {
+      font-size: $default-size * 1.5;
+  }
+}
