--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,39 +1,45 @@
 .footer {
-    border-top: 1px solid $black-50;
-    margin: 2rem 0rem;
+  border-top: 1px solid $black-50;
+  margin: 2rem 0rem;
+}
+
+.footer-nav__ttle,
+.Social-Media__ttle {
+  font-size: 1rem;
+  color: $black;
+  font-weight: bold;
+  margin: 1rem;
+}
+
+.footer-nav__menu {
+  text-decoration: underline;
+  color: $turquoise;
+  display: grid;
+  justify-items: flex-start;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+.footer-nav__link {
+  text-decoration: underline;
+  color: $turquoise;
+  &:visited {
+    color: $dark-orange;
   }
-  
-  .footer-nav__ttle,
-  .Social-Media__ttle {
-    font-size: 1rem;
-    color: $black;
-    font-weight: bold;
-    margin: 1rem;
-  }
-  
+}
+.Social-Media__menu {
+  display: flex;
+  justify-content: space-around;
+  color: $blue-petrol;
+}
+
+.copywrite {
+  margin: 1rem;
+  font-size: 0.75rem;
+  color: $black-50;
+}
+
+@include desktop-only() {
   .footer-nav__menu {
-    text-decoration: underline;
-    color: $turquoise;
-    display: grid;
-    justify-items: flex-start;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
   }
-  .footer-nav__link {
-    text-decoration: underline;
-    color: $turquoise;
-    &:visited {
-      color: $dark-orange;
-    }
-  }
-  .Social-Media__menu {
-    display: flex;
-    justify-content: space-around;
-    color: $blue-petrol;
-  }
-  
-  .copywrite {
-    margin: 1rem;
-    font-size: 0.75rem;
-    color: $black-50;
-  }
+}
